--- a/gulp-start2/src/assets/scss/components/_feature.scss
+++ b/gulp-start2/src/assets/scss/components/_feature.scss
@@ -1,14 +1,16 @@
+.feature {
 
-.feature__text-orange {
-    font-family: 'Muli-ExtraBold';
-    font-weight: 800;
-    line-height: 1.6;
-    letter-spacing: -0.5px;
-    text-align: center;
-    color: #f2612d;
-    font-size: 25px;
-}
+    &__img {
+        margin-bottom: 27px;
+    }
 
-.feature__img {
-    margin-bottom: 27px;
+    &__text-orange {
+        font-family: 'Muli-ExtraBold';
+        font-weight: 800;
+        line-height: 1.6;
+        letter-spacing: -0.5px;
+        text-align: center;
+        color: #f2612d;
+        font-size: 25px;
+    }
 }
