--- a/gulp-start2/src/assets/scss/main.scss
+++ b/gulp-start2/src/assets/scss/main.scss
@@ -6,6 +6,7 @@
 @import "./components/social";
 @import "./components/_buttons";
 @import "./components/feature";
+@import "./components/comment";
 @import "./common/container";
 @import "./common/text";
 @import "./common/title";
@@ -18,6 +19,8 @@
 @import "./blocks/instagram";
 @import "./components/sub-social";
 @import "./layout/_footer";
+
+@import "./abstracts/media";
 
 // h1,
 // h2,
@@ -48,406 +51,3 @@ button {
     background-color: transparent;
 }
 
-/*header*/
-
-@media screen and (max-width: 360px) {
-    .header-content {
-        margin-top: 80px;
-    }
-
-    .header {
-        background-attachment: none;
-    }
-
-}
-
-@media screen and (max-width: 768px) {
-
-    .header__navigation {
-        display: none;
-    }
-
-    .active {
-        position: fixed;
-        background-color: #0aa566;
-        z-index: 2;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        display: flex;
-        flex-direction: column-reverse;
-        padding-top: 100px;
-        justify-content: flex-end;
-        align-items: center;
-    }
-
-    .header__burger--btn {
-        display: block;
-    }
-
-    .header__right-block {
-        margin-bottom: 130px;
-    }
-
-    .menu__list {
-        flex-direction: column;
-    }
-
-    .menu__item {
-        margin-bottom: 30px;
-    }
-
-}
-
-/*smoothies*/
-
-
-@media screen and (max-width: 360px) {
-
-    .smoothies__title {
-        font-size: 2.5em;
-    }
-
-    .smoothies__text {
-        font-size: 1.12em;
-    }
-
-    .feature__text--orange {
-        font-size: 1.25em;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .smoothies__features {
-        max-width: 500px;
-    }
-
-    .smoothies__feature {
-        flex-basis: 50%;
-    }
-
-    .smoothies__feature:nth-child(even) {
-        border-right: 0;
-    }
-
-    .smoothies__feature:nth-child(n+5) {
-        border-bottom: 1px solid #f6edde;
-    }
-
-    .smoothies__feature:nth-last-child(2) {
-        border-bottom: 0;
-    }
-
-    .smoothies__feature:last-child {
-        border-bottom: 0;
-    }
-
-}
-
-
-/*about*/
-
-@media screen and  (max-width: 360px) {
-    .about__title {
-        font-size: 2.75em;
-    }
-
-    .about__btn {
-        font-size: 1.12em;
-    }
-
-    .about__btn::after {
-        right: 20px;
-    }
-
-    .about__img {
-        padding-top: 45px;
-        transform: none;
-        -webkit-transform: none;
-        -moz-transform: none;
-        -ms-transform: none;
-        -o-transform: none;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .about__info {
-        margin: 0;
-    }
-
-    .about__title--green::after {
-        display: none;
-    }
-
-    .about__img {
-        transform: none;
-        padding-top: 50px;
-        -webkit-transform: none;
-        -moz-transform: none;
-        -ms-transform: none;
-        -o-transform: none;
-    }
-}
-/*products*/ 
-
-@media screen and  (max-width: 360px) {
-
-    .products__subtitle,
-    .products__title {
-        font-size: 1.12em;
-        letter-spacing: -0.1px;
-    }
-
-    .products__img {
-        margin-top: 70px;
-    }
-
-    .products__card {
-        flex: 1 0 300px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .products__card {
-        flex: 1 0 480px;
-    }
-}
-
-/*our story*/
-
-@media screen and  (max-width: 360px) {
-    .story {
-        padding: 60px 0px 100px;
-    }
-
-    .story__desc {
-        letter-spacing: -0.9px;
-    }
-
-    .story__title {
-        font-size: 2.75em;
-    }
-
-    .story__image::after {
-        display: none;
-    }
-}
-
-@media screen and  (max-width: 768px) {
-    .story__btn {
-        margin-bottom: 50px;
-    }
-
-    .story__inner {
-        margin-right: 0;
-        margin-bottom: 20px;
-    }
-
-    .story__image::after {
-        top: 10px;
-        left: -160px;
-    }
-}
-
-@media screen and  (max-width: 1338px) {
-    .story__inner {
-        margin-bottom: 50px;
-    }
-}
-/*testimonials*/
-
-@media screen and (max-width: 360px) {
-
-    .testimonials {
-        padding-top: 60px;
-    }
-
-    .testimonials__title {
-        font-size: 2.75em;
-        margin-bottom: 0px;
-    }
-
-    .comment__quote {
-        letter-spacing: 0.4px;
-    }
-
-    .testimonials__comment::before {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 360px) {
-    .testimonials__comment::before {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 768px) {
-
-    .testimonials::after {
-        display: none;
-    }
-
-    .testimonial__title {
-        margin-bottom: 80px;
-        text-align: center;
-    }
-
-    .testimonials__comment {
-        flex-wrap: wrap;
-        flex-flow: column-reverse;
-        margin-bottom: 100px;
-    }
-
-    .comment__text {
-        margin-top: 60px;
-        margin-right: 0;
-    }
-}
-
-@media screen and (min-width: 360px) and (max-width:1120px) {
-    .testimonials__comment::before {
-        display: none;
-    }
-}
-
-/*blog*/
-
-@media screen and (max-width: 360px) {
-
-    .blog__img {
-        width: 100%;
-    }
-
-    .blog {
-        padding: 100px 0 100px;
-    }
-
-    .blog__desc {
-        padding-top: 70px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-
-    .blog {
-        padding-bottom: 150px;
-    }
-
-    .blog__desc {
-        padding-top: 40px;
-        margin-left: 0px;
-        padding-right: 0px;
-    }
-
-    .blog__img {
-        width: 100%;
-    }
-}
-
-@media screen and (max-width: 1235px) {
-    .blog__inner-img::after {
-        display: none;
-    }
-}
-
-/*Instagram*/
-
-@media screen and  (max-width: 360px) {
-    .insta__item {
-        min-width: 260px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .insta__item {
-        min-width: 375px;
-    }
-}
-
-/*footer__information*/
-@media screen and (max-width: 360px) {
-    .footer__information {
-        margin-right: 0;
-        margin-left: 0;
-        margin-bottom: 50px;
-    }
-
-    .footer__top {
-        padding: 65px 0px 55px;
-    }
-}
-
-@media screen and  (max-width: 768px) {
-    .footer__information {
-        margin: 0 73px 0 77px;
-    }
-}
-
-
-/*payment*/
-@media screen and (max-width: 360px) {
-    .footer__payment {
-        margin-right: 0;
-        margin-bottom: 50px;
-    }
-}
-
-@media screen and  (max-width: 768px) {
-    .footer__payment {
-        margin-right: 0px;
-        margin-left: 100px;
-    }
-}
-
-
-/*subscribe*/
-@media screen and (max-width: 360px) {
-    .sub-social {
-        margin-right: 0;
-        margin-bottom: 30px;
-    }
-
-    .sub-social-content {
-        width: 240px;
-    }
-}
-
-
-@media screen and  (max-width: 360px) {
-    .footer__logo {
-        margin-bottom: 60px;
-    }
-
-    .footer__copyright-btn {
-        right: 15px;
-    }
-
-    .footer__copyright-btn::before {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 1758px) {
-    .footer__copyright-btn {
-        right: 15px;
-    }
-
-    .footer__top-content {
-        align-items: center;
-        justify-content: center;
-    }
-
-    .footer__logo {
-        align-self: none;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        margin-bottom: 50px;
-    }
-
-    .footer__title {
-        margin-top: 50px;
-    }
-}
