--- a/gulp-start2/src/assets/scss/blocks/_story.scss
+++ b/gulp-start2/src/assets/scss/blocks/_story.scss
@@ -1,58 +1,58 @@
-
 .story {
+    $story: &;
     padding: 120px 0px 160px;
-}
 
-.story__wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
+    &__wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
 
-.story__title {
-    margin-bottom: 35px;
-    line-height: 40px;
-    letter-spacing: -0.02em;
-}
+        #{$story}__inner {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin-right: 206px;
 
-.story__desc {
-    max-width: 510px;
-    font-size: 18px;
-    line-height: 35px;
-    letter-spacing: -0.1px;
-}
+            #{$story}__title {
+                margin-bottom: 35px;
+                line-height: 40px;
+                letter-spacing: -0.02em;
+            }
 
-.story__inner {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-right: 206px;
-}
+            #{$story}__desc {
+                max-width: 510px;
+                font-size: 18px;
+                line-height: 35px;
+                letter-spacing: -0.1px;
+            }
 
-.story__btn {
-    max-width: 301px;
-    height: 60px;
-    margin-top: 60px;
-    padding-left: 25px;
-    position: relative;
-}
+            #{$story}__btn {
+                max-width: 301px;
+                height: 60px;
+                margin-top: 60px;
+                padding-left: 25px;
+                position: relative;
+            }
+        }
 
-.story__image {
-    position: relative;
-}
+        #{$story}__image {
+            position: relative;
 
-.story__image::after {
-    content: "";
-    display: block;
-    position: absolute;
-    background-image: url("./../images/photoshop-img/story-stamp.png");
-    width: 290px;
-    height: 216px;
-    top: 22px;
-    left: -167px;
-}
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                background-image: url("./../images/photoshop-img/story-stamp.png");
+                width: 290px;
+                height: 216px;
+                top: 22px;
+                left: -167px;
+            }
 
-.story__pic {
-    width: 100%;
-    height: 100%;
+            #{$story}__pic {
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
 }
