--- a/gulp-start2/src/assets/scss/components/_buttons.scss
+++ b/gulp-start2/src/assets/scss/components/_buttons.scss
@@ -1,4 +1,3 @@
-
 .btn {
     font-family: 'Muli-ExtraBold', sans-serif;
     color: #ffffff;
@@ -7,39 +6,45 @@
     text-decoration: none;
     align-items: center;
     border-radius: 30px;
-}
 
-.btn--green-bg {
-    background-color: #0aa566;
-}
+    &--green-bg {
+        background-color: #0aa566;
+    }
 
-.btn--green-bg:hover {
-    background-color: #14774f;
-    color: white;
-}
+    &--green-bg {
+        &:hover {
+            background-color: #14774f;
+            color: white;
+        }
+    }
 
-.btn--green-bg::after {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    height: 16px;
-    width: 30px;
-    background-image: url("./../images/photoshop-img/yellow-arrow\ btn.png");
-    top: 50%;
-    right: 38px;
-    transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-}
+    &--green-bg {
+        &::after {
+            content: "";
+            display: inline-block;
+            position: absolute;
+            height: 16px;
+            width: 30px;
+            background-image: url("./../images/photoshop-img/yellow-arrow\ btn.png");
+            top: 50%;
+            right: 38px;
+            transform: translateY(-50%);
+            -webkit-transform: translateY(-50%);
+            -moz-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            -o-transform: translateY(-50%);
+        }
+    }
 
-.btn--green::after {
-    content: "";
-    display: inline-block;
-    background-image: url("./../images/images/photoshop-img/about-Arrow.png");
-    position: absolute;
-    width: 30px;
-    height: 16px;
-    right: 45px;
+    &--green {
+        &::after {
+            content: "";
+            display: inline-block;
+            background-image: url("./../images/images/photoshop-img/about-Arrow.png");
+            position: absolute;
+            width: 30px;
+            height: 16px;
+            right: 45px;
+        }
+    }
 }
