--- a/gulp-start2/src/assets/scss/components/_menu.scss
+++ b/gulp-start2/src/assets/scss/components/_menu.scss
@@ -1,21 +1,25 @@
-.menu__list {
-    display: flex;
-    align-items: center;
-    column-gap: 35px;
-}
+.menu {
+    &__list {
+        display: flex;
+        align-items: center;
+        column-gap: 35px;
 
-.menu__list:first-child {
-    padding: 0;
-}
+        &:first-child {
+            padding: 0;
+        }
+    }
 
-.menu__item:last-child {
-    margin-right: 0;
-}
+    &__item {
+        &:last-child {
+            margin-right: 0;
+        }
+    }
 
-.menu__link {
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 1em;
-    font-family: 'MuliBold', sans-serif;
-    color: #fff;
+    &__link {
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 1em;
+        font-family: 'MuliBold', sans-serif;
+        color: #fff;
+    }
 }
