--- a/gulp-start2/src/assets/scss/components/_personal.scss
+++ b/gulp-start2/src/assets/scss/components/_personal.scss
@@ -1,33 +1,38 @@
-.personal__list {
-    padding: 0;
-    display: flex;
-    align-items: center;
-    gap: 45px;
-}
+.personal {
 
-.personal__list-item:last-child {
-    margin-right: 0;
-}
+    &__list {
+        padding: 0;
+        display: flex;
+        align-items: center;
+        gap: 45px;
 
-.personal__list:last-child {
-    position: relative;
-}
+        &:last-child {
+            position: relative;
+        }
+    }
 
-.personal__cart-count {
-    background-color: #fff;
-    position: absolute;
-    top: -10px;
-    right: -13px;
-    display: flex;
-    height: 18px;
-    width: 18px;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    font-size: 10px;
-    color: black;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
+    &__list-item {
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+
+    &__cart-count {
+        background-color: #fff;
+        position: absolute;
+        top: -10px;
+        right: -13px;
+        display: flex;
+        height: 18px;
+        width: 18px;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        font-size: 10px;
+        color: black;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+    }
 }
