--- a/gulp-start2/src/assets/scss/layout/_header.scss
+++ b/gulp-start2/src/assets/scss/layout/_header.scss
@@ -1,88 +1,93 @@
 .header {
+    $header: &;
     height: 100vh;
     background-image: url('../images/photoshop-img/main-img.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
-}
-
-.header__top {
-    padding: 88px 0 124px;
-    position: relative;
-}
-
-.header__navigation {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header__burger--btn {
-    background-image: url('./../images/header__images/sort-button-with-three-lines.svg');
-    background-size: cover;
-    height: 30px;
-    width: 30px;
-    position: fixed;
-    top: 30px;
-    right: 30px;
-    display: none;
-    z-index: 1000000;
-}
-
-.header__logo {
-    position: absolute;
-    top: 70px;
-    left: 50%;
-    transform: translate(-50%);
-    -webkit-transform: translate(-50%);
-    -moz-transform: translate(-50%);
-    -ms-transform: translate(-50%);
-    -o-transform: translate(-50%);
-}
 
 
-/*right block*/
-.header__right-block {
-    display: flex;
-    column-gap: 136px;
-    align-items: center;
-}
+    &__top {
+        padding: 88px 0 124px;
+        position: relative;
 
-.header__personal {
-    position: relative;
-}
+        #{$header}__burger--btn {
+            background-image: url('./../images/header__images/sort-button-with-three-lines.svg');
+            background-size: cover;
+            height: 30px;
+            width: 30px;
+            position: fixed;
+            top: 30px;
+            right: 30px;
+            display: none;
+            z-index: 1000000;
+        }
 
-.header__personal::after {
-    content: "";
-    display: inline-block;
-    height: 2px;
-    width: 50px;
-    background-color: #ffd68f;
-    position: absolute;
-    top: 50%;
-    left: 130%;
-}
+        #{$header}__navigation {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
 
-.header-content {
-    display: flex;
-    justify-content: center;
-}
+        #{$header}__logo {
+            position: absolute;
+            top: 70px;
+            left: 50%;
+            transform: translate(-50%);
+            -webkit-transform: translate(-50%);
+            -moz-transform: translate(-50%);
+            -ms-transform: translate(-50%);
+            -o-transform: translate(-50%);
+        }
+    }
 
-.header__burger {
-    display: none;
-}
+    #{$header}__burger {
+        display: none;
 
-/*btn*/
-.header__btn {
-    height: 70px;
-    width: 280px;
-    font-size: 24px;
-    border-radius: 35px;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.67;
-    letter-spacing: -0.48px;
-    padding: 0 38px;
-    position: relative;
+        #{$header}__right-block {
+            display: flex;
+            column-gap: 136px;
+            align-items: center;
+
+            #{$header}__personal {
+                position: relative;
+
+                &::after {
+                    content: "";
+                    display: inline-block;
+                    height: 2px;
+                    width: 50px;
+                    background-color: #ffd68f;
+                    position: absolute;
+                    top: 50%;
+                    left: 130%;
+                }
+            }
+        }
+    }
+
+    #{$header}-content {
+        display: flex;
+        justify-content: center;
+
+        #{$header}__btn {
+            border-radius: 35px;
+            font-family: 'Muli-ExtraBold', sans-serif;
+            color: #ffffff;
+            display: flex;
+            align-items: center;
+            height: 70px;
+            width: 280px;
+            font-size: 24px;
+            line-height: 1.67;
+            letter-spacing: -0.48px;
+            padding: 0 38px;
+            position: relative;
+            -webkit-border-radius: 35px;
+            -moz-border-radius: 35px;
+            -ms-border-radius: 35px;
+            -o-border-radius: 35px;
+        }
+    }
 }
