--- a/gulp-start2/src/assets/scss/blocks/_instagram.scss
+++ b/gulp-start2/src/assets/scss/blocks/_instagram.scss
@@ -43,7 +43,7 @@
     }
 
     &__link {
-        font-family: 'Muli-ExtraBold';
+        font-family: $titleFont;
         font-size: 24px;
         color: #0aa566;
         display: flex;
