--- a/gulp-start2/src/assets/scss/components/_feature.scss
+++ b/gulp-start2/src/assets/scss/components/_feature.scss
@@ -10,7 +10,7 @@
         line-height: 1.6;
         letter-spacing: -0.5px;
         text-align: center;
-        color: #f2612d;
+        color: $featureColor;
         font-size: 25px;
     }
 }
