--- a/gulp-start2/src/assets/scss/blocks/_blog.scss
+++ b/gulp-start2/src/assets/scss/blocks/_blog.scss
@@ -35,7 +35,7 @@
 
             #{$blog}__desc-title {
                 color: #f2612d;
-                font-family: 'Muli-ExtraBold';
+                font-family: $titleFont;
                 font-size: 30px;
                 line-height: 40px;
                 letter-spacing: -0.02em;
@@ -48,12 +48,13 @@
             #{$blog}__ingridients {
                 max-width: 472px;
                 padding-left: 45px;
+                margin-top: 45px;
                 line-height: 35px;
                 letter-spacing: 0.2px;
             }
 
-            #{$blog} span {
-                font-family: 'Muli-ExtraBold';
+            #{$blog}__span {
+                font-family: $titleFont;
                 font-size: 18px;
                 font-style: italic;
                 position: relative;
