--- a/gulp-start2/src/assets/scss/blocks/_testimonials.scss
+++ b/gulp-start2/src/assets/scss/blocks/_testimonials.scss
@@ -40,7 +40,7 @@
             &::before {
                 content: "Sarah A";
                 opacity: 0.6;
-                font-family: "Muli-ExtraBold";
+                font-family: $titleFont;
                 font-size: 200px;
                 color: rgba(82, 25, 5, 0.6);
                 position: absolute;
