--- a/gulp-start2/src/assets/scss/components/_buttons.scss
+++ b/gulp-start2/src/assets/scss/components/_buttons.scss
@@ -8,7 +8,7 @@
     border-radius: 30px;
 
     &--green-bg {
-        background-color: #0aa566;
+        background-color: $secondary;
     }
 
     &--green-bg {
